--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div class="header__desc">
             <h1>Design Studio</h1>
             <p>
-              We promote all interesting person in this world, we wont to share
+              We promote all interesting person in this world, we want to share
               with eveyone one with our potentional models. Join us
             </p>
             <a href="#" class="btn">Read More</a>
