--- a/index.html
+++ b/index.html
@@ -55,6 +55,58 @@
           </div>
         </div>
       </section>
+      <section class="mission">
+        <div class="mission__container">
+          <div class="mission__title">
+            <p>our mission</p>
+            <p>creativity with a purpose</p>
+          </div>
+          <div class="mission__items">
+            <div class="mission__item">
+              <img src="./img/lamp.svg" alt="idea" />
+              <p class="title">Creative</p>
+              <p>
+                We do our work with creative we love do everything new join us.
+              </p>
+              <a href="#">read more</a>
+            </div>
+            <div class="mission__item">
+              <img src="./img/diamond.svg" alt="brilliant design" />
+              <p class="title">Design</p>
+              <p>
+                We do our work with creative we love do everything new join us.
+              </p>
+              <a href="#">read more</a>
+            </div>
+            <div class="mission__item">
+              <img src="./img/group.svg" alt="team" />
+              <p class="title">Team</p>
+              <p>
+                We do our work with creative we love do everything new join us.
+              </p>
+              <a href="#">read more</a>
+            </div>
+          </div>
+          <div class="mission__content">
+            <img
+              src="./img/photo2.webp"
+              alt="working man"
+              class="mission__img"
+            />
+            <div class="mission__article">
+              <div class="article__img">
+                <img src="./img/comp.webp" alt="computer" />
+              </div>
+              <p class="title">The 2 Secrets to Time Management</p>
+              <p>
+                We do our work with creative do everything new we love do
+                everything new. join us.
+              </p>
+              <a href="#">Read more</a>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script> -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script> -->
