--- a/index.html
+++ b/index.html
@@ -88,11 +88,13 @@
             </div>
           </div>
           <div class="mission__content">
-            <img
-              src="./img/photo2.webp"
-              alt="working man"
-              class="mission__img"
-            />
+            <div class="content__right">
+              <img
+                src="./img/photo2.webp"
+                alt="working man"
+                class="mission__img"
+              />
+            </div>
             <div class="mission__article">
               <div class="article__img">
                 <img src="./img/comp.webp" alt="computer" />
