--- a/index.html
+++ b/index.html
@@ -109,6 +109,80 @@
           </div>
         </div>
       </section>
+      <section class="features">
+        <div class="features__container">
+          <div class="features__title">
+            <p>My features</p>
+            <p class="title">Design for Positive Future</p>
+          </div>
+          <div class="features__items">
+            <div class="features__item">
+              <div class="item__content">
+                <p class="title">Web Design</p>
+                <p>We love to promote every design projects join us for more</p>
+              </div>
+            </div>
+            <div class="features__item">
+              <div class="item__content">
+                <p class="title">Develoment</p>
+                <p>We love to promote every design projects join us for more</p>
+              </div>
+            </div>
+            <div class="features__item">
+              <div class="item__content">
+                <p class="title">Photography</p>
+                <p>We love to promote every design projects join us for more</p>
+              </div>
+            </div>
+            <div class="features__item">
+              <div class="item__content">
+                <p class="title">Searching</p>
+                <p>We love to promote every design projects join us for more</p>
+              </div>
+            </div>
+            <div class="features__item">
+              <div class="item__content">
+                <p class="title">Support</p>
+                <p>We love to promote every design projects join us for more</p>
+              </div>
+            </div>
+            <div class="features__item">
+              <div class="item__content">
+                <p class="title">Marketing</p>
+                <p>We love to promote every design projects join us for more</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="team">
+        <div class="team__container">
+          <div class="team__people">
+            <div class="team__person">
+              <img src="./img/worker1.webp" alt="Anna" />
+              <p>Anna</p>
+            </div>
+            <div class="team__person">
+              <img src="./img/worker2.webp" alt="Mark" />
+              <p>Mark</p>
+            </div>
+            <div class="team__person">
+              <img src="./img/worker3.webp" alt="Peter" />
+              <p>Peter</p>
+            </div>
+          </div>
+          <div class="team__desc">
+            <p class="title">Our team</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
+              corrupti repudiandae voluptas fugiat dolores recusandae molestiae,
+              repellendus hic aspernatur quo sed voluptatem itaque incidunt
+              explicabo nam reprehenderit, magnam inventore ut.
+            </p>
+            <a href="#" class="btn">Learn More</a>
+          </div>
+        </div>
+      </section>
     </div>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script> -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script> -->
