--- a/index.html
+++ b/index.html
@@ -183,6 +183,81 @@
           </div>
         </div>
       </section>
+      <section class="service">
+        <div class="service__container">
+          <div class="service__content">
+            <div class="service__title">
+              <p class="title">Our service</p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
+                corrupti
+              </p>
+            </div>
+            <div class="service__gallery">
+              <img src="./img/service1.webp" alt="photo" />
+              <img src="./img/service2.webp" alt="photo" />
+              <img src="./img/service3.webp" alt="photo" />
+              <img src="./img/service4.webp" alt="photo" />
+              <img src="./img/service5.webp" alt="photo" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="creative">
+        <div class="creative__container">
+          <div class="creative__content">
+            <div class="creative__desc">
+              <p class="title">
+                We are Creative <br />
+                <span>design studio</span>
+              </p>
+              <p>Commodi corrupti repudiandae</p>
+              <a href="#" class="btn">Learn more</a>
+            </div>
+            <div class="creative__gallery">
+              <img src="./img/example1.webp" alt="example1" />
+              <img src="./img/example2.webp" alt="example2" />
+              <img src="./img/example3.webp" alt="example3" />
+              <img src="./img/example4.webp" alt="example4" />
+              <img src="./img/example5.webp" alt="example5" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <footer>
+        <div class="footer__container">
+          <ul class="socials">
+            <li>
+              <a href="#"><i class="fab fa-facebook-f"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-linkedin"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+            </li>
+          </ul>
+          <a href="#" class="link">Let's talk?</a>
+          <a href="#" class="btn">Contact Us</a>
+          <div class="sign">
+            <p>
+              Design:
+              <a target="_blank" href="https://github.com/yanedelman"
+                >@yanedelman</a
+              >
+              <br />
+              Front-end:
+              <a target="_blank" href="https://github.com/Alexandria-dr"
+                >@alexandria-dr</a
+              >
+            </p>
+            <p>© 2021</p>
+          </div>
+        </div>
+      </footer>
     </div>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script> -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script> -->
