--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
       </section>
       <section class="mission">
         <div class="mission__container">
-          <div class="mission__title">
+          <div class="mission__title gsap_opacity">
             <p>our mission</p>
             <p>creativity with a purpose</p>
           </div>
           <div class="mission__items">
-            <div class="mission__item">
+            <div class="mission__item gsap_up">
               <img src="./img/lamp.svg" alt="idea" />
               <p class="title">Creative</p>
               <p>
@@ -70,7 +70,7 @@
               </p>
               <a href="#">read more</a>
             </div>
-            <div class="mission__item">
+            <div class="mission__item gsap_up">
               <img src="./img/diamond.svg" alt="brilliant design" />
               <p class="title">Design</p>
               <p>
@@ -78,7 +78,7 @@
               </p>
               <a href="#">read more</a>
             </div>
-            <div class="mission__item">
+            <div class="mission__item gsap_up">
               <img src="./img/group.svg" alt="team" />
               <p class="title">Team</p>
               <p>
@@ -92,10 +92,10 @@
               <img
                 src="./img/photo2.webp"
                 alt="working man"
-                class="mission__img"
+                class="mission__img gsap_left"
               />
             </div>
-            <div class="mission__article">
+            <div class="mission__article gsap_left">
               <div class="article__img">
                 <img src="./img/comp.webp" alt="computer" />
               </div>
@@ -111,43 +111,43 @@
       </section>
       <section class="features">
         <div class="features__container">
-          <div class="features__title">
+          <div class="features__title gsap_opacity">
             <p>My features</p>
             <p class="title">Design for Positive Future</p>
           </div>
           <div class="features__items">
             <div class="features__item">
-              <div class="item__content">
+              <div class="item__content gsap_up">
                 <p class="title">Web Design</p>
                 <p>We love to promote every design projects join us for more</p>
               </div>
             </div>
             <div class="features__item">
-              <div class="item__content">
+              <div class="item__content gsap_up">
                 <p class="title">Develoment</p>
                 <p>We love to promote every design projects join us for more</p>
               </div>
             </div>
             <div class="features__item">
-              <div class="item__content">
+              <div class="item__content gsap_up">
                 <p class="title">Photography</p>
                 <p>We love to promote every design projects join us for more</p>
               </div>
             </div>
             <div class="features__item">
-              <div class="item__content">
+              <div class="item__content gsap_up">
                 <p class="title">Searching</p>
                 <p>We love to promote every design projects join us for more</p>
               </div>
             </div>
             <div class="features__item">
-              <div class="item__content">
+              <div class="item__content gsap_up">
                 <p class="title">Support</p>
                 <p>We love to promote every design projects join us for more</p>
               </div>
             </div>
             <div class="features__item">
-              <div class="item__content">
+              <div class="item__content gsap_up">
                 <p class="title">Marketing</p>
                 <p>We love to promote every design projects join us for more</p>
               </div>
@@ -158,35 +158,35 @@
       <section class="team">
         <div class="team__container">
           <div class="team__people">
-            <div class="team__person">
+            <div class="team__person gsap_up">
               <img src="./img/worker1.webp" alt="Anna" />
               <p>Anna</p>
             </div>
-            <div class="team__person">
+            <div class="team__person gsap_up">
               <img src="./img/worker2.webp" alt="Mark" />
               <p>Mark</p>
             </div>
-            <div class="team__person">
+            <div class="team__person gsap_up">
               <img src="./img/worker3.webp" alt="Peter" />
               <p>Peter</p>
             </div>
           </div>
           <div class="team__desc">
-            <p class="title">Our team</p>
-            <p>
+            <p class="title gsap_left">Our team</p>
+            <p class="gsap_left">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
               corrupti repudiandae voluptas fugiat dolores recusandae molestiae,
               repellendus hic aspernatur quo sed voluptatem itaque incidunt
               explicabo nam reprehenderit, magnam inventore ut.
             </p>
-            <a href="#" class="btn">Learn More</a>
+            <a href="#" class="btn gsap_opacity">Learn More</a>
           </div>
         </div>
       </section>
       <section class="service">
         <div class="service__container">
           <div class="service__content">
-            <div class="service__title">
+            <div class="service__title gsap_opacity">
               <p class="title">Our service</p>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
@@ -194,11 +194,11 @@
               </p>
             </div>
             <div class="service__gallery">
-              <img src="./img/service1.webp" alt="photo" />
-              <img src="./img/service2.webp" alt="photo" />
-              <img src="./img/service3.webp" alt="photo" />
-              <img src="./img/service4.webp" alt="photo" />
-              <img src="./img/service5.webp" alt="photo" />
+              <img src="./img/service1.webp" alt="photo" class="gsap_up" />
+              <img src="./img/service2.webp" alt="photo" class="gsap_up" />
+              <img src="./img/service3.webp" alt="photo" class="gsap_up" />
+              <img src="./img/service4.webp" alt="photo" class="gsap_up" />
+              <img src="./img/service5.webp" alt="photo" class="gsap_up" />
             </div>
           </div>
         </div>
@@ -211,10 +211,10 @@
                 We are Creative <br />
                 <span>design studio</span>
               </p>
-              <p>Commodi corrupti repudiandae</p>
+              <p class="text">Commodi corrupti repudiandae</p>
               <a href="#" class="btn">Learn more</a>
             </div>
-            <div class="creative__gallery">
+            <div class="creative__gallery gsap_opacity">
               <img src="./img/example1.webp" alt="example1" />
               <img src="./img/example2.webp" alt="example2" />
               <img src="./img/example3.webp" alt="example3" />
@@ -259,8 +259,8 @@
         </div>
       </footer>
     </div>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script> -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script>
     <script src="./js/script.js"></script>
   </body>
 </html>
