--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="nav__menu">
             <ul class="menu-list">
               <li><a href="#">home</a></li>
-              <li><a href="#">portfolio</a></li>
+              <li><a href="./portfolio.html">portfolio</a></li>
               <li><a href="#">contact</a></li>
             </ul>
           </div>
