--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link rel="stylesheet" href="./css/style.css" />
     <link
       rel="apple-touch-icon"
@@ -26,8 +27,12 @@
     <link rel="stylesheet" href="./css/style.css" />
     <title>Portfolio</title>
   </head>
-  <body>
-    <section class="portfolio">
+  <body data-barba="wrapper ">
+    <section
+      class="portfolio"
+      data-barba="container"
+      data-barba-namespace="portfolio"
+    >
       <div class="portfolio__container">
         <div class="portfolio__header">
           <div class="header__title">
@@ -44,5 +49,8 @@
         </div>
       </div>
     </section>
+    <script src="https://unpkg.com/@barba/core"></script>
+    <script src="https://unpkg.com/@barba/css"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
