--- a/index.html
+++ b/index.html
@@ -25,243 +25,260 @@
     <link rel="manifest" href="./favicon/site.webmanifest" />
     <title>Design</title>
   </head>
-  <body data-barba="wrapper">
-    <div class="wrapper" data-barba="container" data-barba-namespace="home">
-      <nav class="hidden">
-        <div class="nav__container">
-          <div class="nav__logo">
-            <p>Design</p>
+  <body>
+    <div data-barba="wrapper">
+      <div class="wrapper" data-barba="container" data-barba-namespace="home">
+        <nav class="hidden">
+          <div class="nav__container">
+            <div class="nav__logo">
+              <p>Design</p>
+            </div>
+            <div class="nav__menu">
+              <ul class="menu-list">
+                <li><a href="#">home</a></li>
+                <li><a href="./portfolio.html">portfolio</a></li>
+                <li><a href="#">contact</a></li>
+              </ul>
+            </div>
+            <div class="nav__burger"><span></span></div>
           </div>
-          <div class="nav__menu">
-            <ul class="menu-list">
-              <li><a href="#">home</a></li>
-              <li><a href="./portfolio.html">portfolio</a></li>
-              <li><a href="#">contact</a></li>
-            </ul>
-          </div>
-          <div class="nav__burger"><span></span></div>
-        </div>
-      </nav>
-      <section class="header">
-        <div class="header__container hidden">
-          <img src="./img/photo1.webp" alt="model" />
-          <div class="header__desc">
-            <h1>Design Studio</h1>
-            <p>
-              We promote all interesting person in this world, we want to share
-              with eveyone one with our potentional models. Join us
-            </p>
-            <a href="#" class="btn">Read More</a>
-          </div>
-        </div>
-      </section>
-      <section class="mission">
-        <div class="mission__container">
-          <div class="mission__title gsap_opacity">
-            <p>our mission</p>
-            <p>creativity with a purpose</p>
-          </div>
-          <div class="mission__items">
-            <div class="mission__item gsap_up">
-              <img src="./img/lamp.svg" alt="idea" />
-              <p class="title">Creative</p>
+        </nav>
+        <section class="header">
+          <div class="header__container hidden">
+            <img src="./img/photo1.webp" alt="model" />
+            <div class="header__desc">
+              <h1>Design Studio</h1>
               <p>
-                We do our work with creative we love do everything new join us.
+                We promote all interesting person in this world, we want to
+                share with eveyone one with our potentional models. Join us
               </p>
-              <a href="#">read more</a>
-            </div>
-            <div class="mission__item gsap_up">
-              <img src="./img/diamond.svg" alt="brilliant design" />
-              <p class="title">Design</p>
-              <p>
-                We do our work with creative we love do everything new join us.
-              </p>
-              <a href="#">read more</a>
-            </div>
-            <div class="mission__item gsap_up">
-              <img src="./img/group.svg" alt="team" />
-              <p class="title">Team</p>
-              <p>
-                We do our work with creative we love do everything new join us.
-              </p>
-              <a href="#">read more</a>
+              <a href="#" class="btn">Read More</a>
             </div>
           </div>
-          <div class="mission__content">
-            <div class="content__right">
-              <img
-                src="./img/photo2.webp"
-                alt="working man"
-                class="mission__img gsap_left"
-              />
+        </section>
+        <section class="mission">
+          <div class="mission__container">
+            <div class="mission__title gsap_opacity">
+              <p>our mission</p>
+              <p>creativity with a purpose</p>
             </div>
-            <div class="mission__article gsap_left">
-              <div class="article__img">
-                <img src="./img/comp.webp" alt="computer" />
+            <div class="mission__items">
+              <div class="mission__item gsap_up">
+                <img src="./img/lamp.svg" alt="idea" />
+                <p class="title">Creative</p>
+                <p>
+                  We do our work with creative we love do everything new join
+                  us.
+                </p>
+                <a href="#">read more</a>
               </div>
-              <p class="title">The 2 Secrets to Time Management</p>
-              <p>
-                We do our work with creative do everything new we love do
-                everything new. join us.
-              </p>
-              <a href="#">Read more</a>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="features">
-        <div class="features__container">
-          <div class="features__title gsap_opacity">
-            <p>My features</p>
-            <p class="title">Design for Positive Future</p>
-          </div>
-          <div class="features__items">
-            <div class="features__item">
-              <div class="item__content gsap_up">
-                <p class="title">Web Design</p>
-                <p>We love to promote every design projects join us for more</p>
+              <div class="mission__item gsap_up">
+                <img src="./img/diamond.svg" alt="brilliant design" />
+                <p class="title">Design</p>
+                <p>
+                  We do our work with creative we love do everything new join
+                  us.
+                </p>
+                <a href="#">read more</a>
               </div>
-            </div>
-            <div class="features__item">
-              <div class="item__content gsap_up">
-                <p class="title">Develoment</p>
-                <p>We love to promote every design projects join us for more</p>
+              <div class="mission__item gsap_up">
+                <img src="./img/group.svg" alt="team" />
+                <p class="title">Team</p>
+                <p>
+                  We do our work with creative we love do everything new join
+                  us.
+                </p>
+                <a href="#">read more</a>
               </div>
             </div>
-            <div class="features__item">
-              <div class="item__content gsap_up">
-                <p class="title">Photography</p>
-                <p>We love to promote every design projects join us for more</p>
+            <div class="mission__content">
+              <div class="content__right">
+                <img
+                  src="./img/photo2.webp"
+                  alt="working man"
+                  class="mission__img gsap_left"
+                />
               </div>
-            </div>
-            <div class="features__item">
-              <div class="item__content gsap_up">
-                <p class="title">Searching</p>
-                <p>We love to promote every design projects join us for more</p>
-              </div>
-            </div>
-            <div class="features__item">
-              <div class="item__content gsap_up">
-                <p class="title">Support</p>
-                <p>We love to promote every design projects join us for more</p>
-              </div>
-            </div>
-            <div class="features__item">
-              <div class="item__content gsap_up">
-                <p class="title">Marketing</p>
-                <p>We love to promote every design projects join us for more</p>
+              <div class="mission__article gsap_left">
+                <div class="article__img">
+                  <img src="./img/comp.webp" alt="computer" />
+                </div>
+                <p class="title">The 2 Secrets to Time Management</p>
+                <p>
+                  We do our work with creative do everything new we love do
+                  everything new. join us.
+                </p>
+                <a href="#">Read more</a>
               </div>
             </div>
           </div>
-        </div>
-      </section>
-      <section class="team">
-        <div class="team__container">
-          <div class="team__people">
-            <div class="team__person gsap_up">
-              <img src="./img/worker1.webp" alt="Anna" />
-              <p>Anna</p>
+        </section>
+        <section class="features">
+          <div class="features__container">
+            <div class="features__title gsap_opacity">
+              <p>My features</p>
+              <p class="title">Design for Positive Future</p>
             </div>
-            <div class="team__person gsap_up">
-              <img src="./img/worker2.webp" alt="Mark" />
-              <p>Mark</p>
-            </div>
-            <div class="team__person gsap_up">
-              <img src="./img/worker3.webp" alt="Peter" />
-              <p>Peter</p>
+            <div class="features__items">
+              <div class="features__item">
+                <div class="item__content gsap_up">
+                  <p class="title">Web Design</p>
+                  <p>
+                    We love to promote every design projects join us for more
+                  </p>
+                </div>
+              </div>
+              <div class="features__item">
+                <div class="item__content gsap_up">
+                  <p class="title">Develoment</p>
+                  <p>
+                    We love to promote every design projects join us for more
+                  </p>
+                </div>
+              </div>
+              <div class="features__item">
+                <div class="item__content gsap_up">
+                  <p class="title">Photography</p>
+                  <p>
+                    We love to promote every design projects join us for more
+                  </p>
+                </div>
+              </div>
+              <div class="features__item">
+                <div class="item__content gsap_up">
+                  <p class="title">Searching</p>
+                  <p>
+                    We love to promote every design projects join us for more
+                  </p>
+                </div>
+              </div>
+              <div class="features__item">
+                <div class="item__content gsap_up">
+                  <p class="title">Support</p>
+                  <p>
+                    We love to promote every design projects join us for more
+                  </p>
+                </div>
+              </div>
+              <div class="features__item">
+                <div class="item__content gsap_up">
+                  <p class="title">Marketing</p>
+                  <p>
+                    We love to promote every design projects join us for more
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
-          <div class="team__desc">
-            <p class="title gsap_left">Our team</p>
-            <p class="gsap_left">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
-              corrupti repudiandae voluptas fugiat dolores recusandae molestiae,
-              repellendus hic aspernatur quo sed voluptatem itaque incidunt
-              explicabo nam reprehenderit, magnam inventore ut.
-            </p>
-            <a href="#" class="btn gsap_opacity">Learn More</a>
-          </div>
-        </div>
-      </section>
-      <section class="service">
-        <div class="service__container">
-          <div class="service__content">
-            <div class="service__title gsap_opacity">
-              <p class="title">Our service</p>
-              <p>
+        </section>
+        <section class="team">
+          <div class="team__container">
+            <div class="team__people">
+              <div class="team__person gsap_up">
+                <img src="./img/worker1.webp" alt="Anna" />
+                <p>Anna</p>
+              </div>
+              <div class="team__person gsap_up">
+                <img src="./img/worker2.webp" alt="Mark" />
+                <p>Mark</p>
+              </div>
+              <div class="team__person gsap_up">
+                <img src="./img/worker3.webp" alt="Peter" />
+                <p>Peter</p>
+              </div>
+            </div>
+            <div class="team__desc">
+              <p class="title gsap_left">Our team</p>
+              <p class="gsap_left">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
-                corrupti
+                corrupti repudiandae voluptas fugiat dolores recusandae
+                molestiae, repellendus hic aspernatur quo sed voluptatem itaque
+                incidunt explicabo nam reprehenderit, magnam inventore ut.
               </p>
-            </div>
-            <div class="service__gallery">
-              <img src="./img/service1.webp" alt="photo" class="gsap_up" />
-              <img src="./img/service2.webp" alt="photo" class="gsap_up" />
-              <img src="./img/service3.webp" alt="photo" class="gsap_up" />
-              <img src="./img/service4.webp" alt="photo" class="gsap_up" />
-              <img src="./img/service5.webp" alt="photo" class="gsap_up" />
+              <a href="#" class="btn gsap_opacity">Learn More</a>
             </div>
           </div>
-        </div>
-      </section>
-      <section class="creative">
-        <div class="creative__container">
-          <div class="creative__content">
-            <div class="creative__desc">
-              <p class="title">
-                We are Creative <br />
-                <span>design studio</span>
+        </section>
+        <section class="service">
+          <div class="service__container">
+            <div class="service__content">
+              <div class="service__title gsap_opacity">
+                <p class="title">Our service</p>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Commodi corrupti
+                </p>
+              </div>
+              <div class="service__gallery">
+                <img src="./img/service1.webp" alt="photo" class="gsap_up" />
+                <img src="./img/service2.webp" alt="photo" class="gsap_up" />
+                <img src="./img/service3.webp" alt="photo" class="gsap_up" />
+                <img src="./img/service4.webp" alt="photo" class="gsap_up" />
+                <img src="./img/service5.webp" alt="photo" class="gsap_up" />
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="creative">
+          <div class="creative__container">
+            <div class="creative__content">
+              <div class="creative__desc">
+                <p class="title">
+                  We are Creative <br />
+                  <span>design studio</span>
+                </p>
+                <p class="text">Commodi corrupti repudiandae</p>
+                <a href="#" class="btn">Learn more</a>
+              </div>
+              <div class="creative__gallery gsap_opacity">
+                <img src="./img/example1.webp" alt="example1" />
+                <img src="./img/example2.webp" alt="example2" />
+                <img src="./img/example3.webp" alt="example3" />
+                <img src="./img/example4.webp" alt="example4" />
+                <img src="./img/example5.webp" alt="example5" />
+              </div>
+            </div>
+          </div>
+        </section>
+        <footer>
+          <div class="footer__container">
+            <ul class="socials">
+              <li>
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+              </li>
+            </ul>
+            <a href="#" class="link">Let's talk?</a>
+            <a href="#" class="btn">Contact Us</a>
+            <div class="sign">
+              <p>
+                Design:
+                <a target="_blank" href="https://github.com/yanedelman"
+                  >@yanedelman</a
+                >
+                <br />
+                Front-end:
+                <a target="_blank" href="https://github.com/Alexandria-dr"
+                  >@alexandria-dr</a
+                >
               </p>
-              <p class="text">Commodi corrupti repudiandae</p>
-              <a href="#" class="btn">Learn more</a>
-            </div>
-            <div class="creative__gallery gsap_opacity">
-              <img src="./img/example1.webp" alt="example1" />
-              <img src="./img/example2.webp" alt="example2" />
-              <img src="./img/example3.webp" alt="example3" />
-              <img src="./img/example4.webp" alt="example4" />
-              <img src="./img/example5.webp" alt="example5" />
+              <p>© 2021</p>
             </div>
           </div>
-        </div>
-      </section>
-      <footer>
-        <div class="footer__container">
-          <ul class="socials">
-            <li>
-              <a href="#"><i class="fab fa-facebook-f"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fab fa-twitter"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fab fa-linkedin"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fab fa-instagram"></i></a>
-            </li>
-          </ul>
-          <a href="#" class="link">Let's talk?</a>
-          <a href="#" class="btn">Contact Us</a>
-          <div class="sign">
-            <p>
-              Design:
-              <a target="_blank" href="https://github.com/yanedelman"
-                >@yanedelman</a
-              >
-              <br />
-              Front-end:
-              <a target="_blank" href="https://github.com/Alexandria-dr"
-                >@alexandria-dr</a
-              >
-            </p>
-            <p>© 2021</p>
-          </div>
-        </div>
-      </footer>
+        </footer>
+      </div>
     </div>
-
     <script src="https://unpkg.com/@barba/core"></script>
     <script src="https://unpkg.com/@barba/css"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script>
     <script src="./js/script.js"></script>
