--- a/portfolio.html
+++ b/portfolio.html
@@ -27,30 +27,33 @@
     <link rel="stylesheet" href="./css/style.css" />
     <title>Portfolio</title>
   </head>
-  <body data-barba="wrapper ">
-    <section
-      class="portfolio"
-      data-barba="container"
-      data-barba-namespace="portfolio"
-    >
-      <div class="portfolio__container">
-        <div class="portfolio__header">
-          <div class="header__title">
-            <h1>portfolio</h1>
-            <h2>Choose your favourite</h2>
-          </div>
-          <div class="header__btn">
-            <a href="./index.html"
-              ><img src="./img/arrow.svg" alt="arrow" />
-              <span>Back </span>
-            </a>
-            <a href="#" class="btn">Contact Us</a>
+  <body>
+    <div data-barba="wrapper">
+      <section
+        class="portfolio"
+        data-barba="container"
+        data-barba-namespace="portfolio"
+      >
+        <div class="portfolio__container">
+          <div class="portfolio__header">
+            <div class="header__title">
+              <h1>portfolio</h1>
+              <h2>Choose your favourite</h2>
+            </div>
+            <div class="header__btn">
+              <a href="./index.html"
+                ><img src="./img/arrow.svg" alt="arrow" />
+                <span>Back </span>
+              </a>
+              <a href="#" class="btn">Contact Us</a>
+            </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
+    </div>
     <script src="https://unpkg.com/@barba/core"></script>
     <script src="https://unpkg.com/@barba/css"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="./js/script.js"></script>
   </body>
 </html>
