--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,7 @@
       href="./favicon/favicon-16x16.png"
     />
     <link rel="manifest" href="./favicon/site.webmanifest" />
+    <link rel="stylesheet" href="./scroll/jquery.mCustomScrollbar.min.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Portfolio</title>
   </head>
@@ -48,12 +49,90 @@
               <a href="#" class="btn">Contact Us</a>
             </div>
           </div>
+          <div class="portfolio__works mCustomScrollbar" id="content_1">
+            <div class="portfolio__work">
+              <img src="./img/portfolio1.webp" alt="Ryan Lebel" />
+              <div class="work__desc">
+                <h3>Ryan Lebel</h3>
+                <p>
+                  <span>Theme:</span> Mountain <br /><br />
+                  <span>About:</span> Lorem ipsum dolor sit amet consectetur
+                  adipisicing elit. Laudantium, fugit. <br /><br />
+                  <span>Link:</span><a href="#"> ryanlebel.com</a>
+                </p>
+              </div>
+            </div>
+            <div class="portfolio__work">
+              <img src="./img/portfolio2.webp" alt="Mancajevscek Photography" />
+              <div class="work__desc">
+                <h3>Mancajevscek Photography</h3>
+                <p>
+                  <span>Theme:</span> Photography <br /><br />
+                  <span>About:</span> Lorem ipsum dolor sit amet consectetur
+                  adipisicing elit. Laudantium, fugit. <br /><br />
+                  <span>Link:</span><a href="#"> mancajevscek.com</a>
+                </p>
+              </div>
+            </div>
+            <div class="portfolio__work">
+              <img src="./img/portfolio3.webp" alt="Aurelien Longo" />
+              <div class="work__desc">
+                <h3>Aurelien Longo</h3>
+                <p>
+                  <span>Theme:</span> Gallery <br /><br />
+                  <span>About:</span> Lorem ipsum dolor sit amet consectetur
+                  adipisicing elit. Laudantium, fugit. <br /><br />
+                  <span>Link:</span><a href="#"> aurelienlongo.com</a>
+                </p>
+              </div>
+            </div>
+            <div class="portfolio__work">
+              <img src="./img/portfolio4.webp" alt="Martin Stranka" />
+              <div class="work__desc">
+                <h3>Martin Stranka</h3>
+                <p>
+                  <span>Theme:</span> Photography <br /><br />
+                  <span>About:</span> Lorem ipsum dolor sit amet consectetur
+                  adipisicing elit. Laudantium, fugit. <br /><br />
+                  <span>Link:</span><a href="#"> martinstranka.com</a>
+                </p>
+              </div>
+            </div>
+            <div class="portfolio__work">
+              <img src="./img/portfolio5.webp" alt="Mika Suutari" />
+              <div class="work__desc">
+                <h3>Mika Suutari</h3>
+                <p>
+                  <span>Theme:</span> Weather <br /><br />
+                  <span>About:</span> Lorem ipsum dolor sit amet consectetur
+                  adipisicing elit. Laudantium, fugit. <br /><br />
+                  <span>Link:</span><a href="#"> mikasuutari.com</a>
+                </p>
+              </div>
+            </div>
+            <div class="portfolio__work">
+              <img src="./img/portfolio6.webp" alt="Ernie Chang" />
+              <div class="work__desc">
+                <h3>Ernie Chang</h3>
+                <p>
+                  <span>Theme:</span> Beauty <br /><br />
+                  <span>About:</span> Lorem ipsum dolor sit amet consectetur
+                  adipisicing elit. Laudantium, fugit. <br /><br />
+                  <span>Link:</span><a href="#"> lightmare.com</a>
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </div>
     <script src="https://unpkg.com/@barba/core"></script>
     <script src="https://unpkg.com/@barba/css"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script> -->
+    <script src="./scroll/jquery.mCustomScrollbar.concat.min.js"></script>
     <script src="./js/script.js"></script>
+    <script src="./js/scroll.js"></script>
   </body>
 </html>
