--- a/portfolio.html
+++ b/portfolio.html
@@ -28,13 +28,13 @@
     <link rel="stylesheet" href="./css/style.css" />
     <title>Portfolio</title>
   </head>
-  <body>
-    <div data-barba="wrapper">
-      <section
-        class="portfolio"
-        data-barba="container"
-        data-barba-namespace="portfolio"
-      >
+  <body data-barba="wrapper">
+    <div
+      class="wrapper"
+      data-barba="container"
+      data-barba-namespace="portfolio"
+    >
+      <section class="portfolio">
         <div class="portfolio__container">
           <div class="portfolio__header">
             <div class="header__title">
@@ -134,10 +134,10 @@
       crossorigin="anonymous"
     ></script>
     <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script> -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script> -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script>
     <script src="./scroll/jquery.mCustomScrollbar.concat.min.js"></script>
-    <script src="./js/script.js"></script>
     <script src="./js/scroll.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
